ajustes pra hospedar

--- a/sobreNos.html
+++ b/sobreNos.html
@@ -27,14 +27,14 @@
         <div class="interface">
             <div class="logoP&G">
                 <a href="sobreNos.html">
-                    <img width="100px" src="../imagensPublic/logoPGGames.png" alt="Logo da empresa">
+                    <img width="100px" src="logoPGGames.png" alt="Logo da empresa">
                 </a> 
             </div><!--Logo-->
 
             <!--Usa a tag nav pela semântica, é uma seção que aponta pra outras páginas-->
             <nav class="menu">
                 <ul>
-                    <li><a href="../pagina-sobre-jogo/sobreJogo.html">Sobre o jogo</a></li>
+                    <li><a href="sobreJogo.html">Sobre o jogo</a></li>
                     <li><a href="#rodape">Contato</a></li>
                     <li>
                         <div class="trilho" id="trilho">
@@ -46,7 +46,7 @@
             </nav>
 
             <div class="botaoContato">
-                <a href="../pagina-jogo/game.html">
+                <a href="game.html">
                     <button>Jogar</button>
                 </a>
             </div>
@@ -70,13 +70,13 @@
                                 que inspirem a imaginação e deixem uma marca duradoura na indústria dos jogos. Nosso foco está em oferecer 
                                 entretenimento acessível e inclusivo para todas as idades e em todas as plataformas.
                                 <div class="botaoContato">
-                                    <a href="../pagina-sobre-jogo/sobreJogo.html"><button> Saiba mais!</button></a>
+                                    <a href="sobreJogo.html"><button> Saiba mais!</button></a>
                                 </div> <!--BotaoContato-->
                             </p>
                     </div><!--TXT introducao-->
 
                     <div class="imagemTopo">
-                        <img id = "Teste" width= "800" height="500" src = "../imagensPublic/ImagemJogo.png" alt="">
+                        <img id = "Teste" width= "800" height="500" src = "ImagemJogo.png" alt="">
                     </div><!--Imagem Gabas-->
                 </div><!--flex-->
 
@@ -87,7 +87,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="imgGabriel">
-                        <img id = "fotoGabriel" width = "200" src ="imagens-sobre-nos/gabas_2000_3554.png" alt="Foto do Gabriel">
+                        <img id = "fotoGabriel" width = "200" src ="gabas_2000_3554.png" alt="Foto do Gabriel">
                     </div><!--ImgGabas-->
                     <div class="txtGabriel">    
                         <h2>Desenvolvedor: <span>Gabriel Santana</span></h2>
@@ -113,7 +113,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="imgPedro">
-                        <img id = "fotoPedro" width="200" src="imagens-sobre-nos/pedro_2000_3554.png"Foto do Pedro">
+                        <img id = "fotoPedro" width="200" src="pedro_2000_3554.png"Foto do Pedro">
                     </div><!--IMGPEDRO-->
                     <div class="txtPedro">
                         <h2>
@@ -148,7 +148,7 @@
                         <button id="segredo">Clique aqui para ver um segredo O.o</button>
                     </div>
                     <div class="contImg" style="display: none;">
-                        <img id = "fotoCBJ"width="850px" src="../imagensPublic/FotoShow.png" alt="Nossa foto no show">
+                        <img id = "fotoCBJ"width="850px" src="FotoShow.png" alt="Nossa foto no show">
                         <p>Foto 100% verídica do nosso show com o Chorão e o Champignom no dia 12/12/2012</p>
                         <br><br>
                     </div><!--contImg-->
@@ -164,7 +164,7 @@
             <div class="linhaRodape1">
                 <div class="flex">
                     <div class="logo">
-                        <img width="75px" src="imagens-sobre-nos/logoPGGames.png" alt="logo">
+                        <img width="75px" src="logoPGGames.png" alt="logo">
                     </div><!--Logo-->
                     <p><i class="bi bi-envelope-at"></i> <a
                             href="mailto:gabrielsantanadias133@gmail.com">gabrielsantanadias133@gmail.com</a></p>
