Realizado alteracoes para utilizar o github pages

--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="interface">
             <div class="logoP&G">
-                <a href="sobreNos.html">
+                <a href="Index.html">
                     <img width="100px" src="logoPGGames.png" alt="Logo da empresa">
                 </a> 
             </div><!--Logo-->
