--- a/game.html
+++ b/game.html
@@ -13,14 +13,14 @@
     <header>
         <div class="interface">
             <div class="logoP&G">
-                <a href="sobreNos.html">
+                <a href="Index.html">
                     <img width="100px" src="logoPGGames.png" alt="Logo da empresa">
                 </a>
             </div><!--Logo-->
             <!--Usa a tag nav pela semântica, é uma seção que aponta pra outras páginas-->
             <nav class="menu">
                 <ul>
-                    <li><a href="sobreNos.html">Sobre nós</a></li>
+                    <li><a href="Index.html">Sobre nós</a></li>
                 </ul>
             </nav>
 
