Realizado alteracoes para utilizar o github pages

--- a/sobreJogo.html
+++ b/sobreJogo.html
@@ -21,14 +21,14 @@
     <header>
         <div class="interface">
             <div class="logoP&G">
-                <a href="Index.html">
+                <a href="index.html">
                     <img width="100px" src="logoPGGames.png" alt="Logo da empresa">
                 </a>
             </div><!--Logo-->
             <!--Usa a tag nav pela semântica, é uma seção que aponta pra outras páginas-->
             <nav class="menu">
                 <ul>
-                    <li><a href="Index.html">Sobre nós</a></li>
+                    <li><a href="index.html">Sobre nós</a></li>
                     <li><a href="#rodape">Contato</a></li>
                     <li>
                         <div class="trilho" id="trilho">
